# AlphaAgent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_zh.md  pyproject.toml
alphaagent/: __init__.py  __main__.py  cli.py  report.py
alphaagent/agents/: __init__.py  base.py  orchestrator.py  prompting.py
alphaagent/agents/pitguard/: __init__.py  anonymize.py  boundary.py  evidence.py  probe.py
alphaagent/agents/policies/: __init__.py  debate.py  llm_judge.py  panel.py  vote.py
alphaagent/agents/prompts/: fundamental.md  risk.md  sentiment.md  technical.md
alphaagent/agents/roles/: __init__.py  fundamental.py  risk.py  sentiment.py  technical.py
alphaagent/backtest/: __init__.py  backtesting_py.py  base.py  simple.py
alphaagent/core/: __init__.py  config.py  env.py  indicators.py  models.py  pipeline.py  registry.py
alphaagent/data/: __init__.py  base.py  router.py
alphaagent/data/providers/: __init__.py  demo.py  fmp.py  yfinance_provider.py
alphaagent/entry/: __init__.py  base.py  rules.py
alphaagent/filters/: __init__.py  base.py  trend.py
alphaagent/llm/: __init__.py  base.py  mock.py  openai_client.py  openrouter.py
alphaagent/mcp/: __init__.py  __main__.py  server.py
alphaagent/pool/: __init__.py  base.py  watchlist.py
configs/: default.toml  demo.toml  real.toml
demo_data/: AAPL.csv  AMZN.csv  BTC-USD.csv  ETH-USD.csv  MSFT.csv  NVDA.csv
demo_data/fundamentals/: AAPL.json  AMZN.json  MSFT.json  NVDA.json
demo_data/news/: AAPL.json  AMZN.json  MSFT.json  NVDA.json
examples/: README.md  custom_analyst.py  custom_filter.py  custom_pool.py  custom_provider.py
scripts/: gen_demo_data.py
tests/: test_agents.py  test_backtest.py  test_debate.py  test_entry.py  test_fmp.py  test_fundamentals.py  test_mcp.py  test_pipeline.py  test_pitguard.py  test_policies.py  test_prompts.py  test_registry.py  test_router.py  test_sentiment.py
